--- a/SieteYMedia/media7.html
+++ b/SieteYMedia/media7.html
@@ -17,7 +17,7 @@
 		<div class="card border-success mb-3" style="max-width: 30rem;">
 		<div class="card-header">JUGADORES</div>
 		<div class="card-body">
-		<form id="product-form" name="media7" action="media7.php" method="post" class="card-body">
+		<form id="product-form" name="media7" action="7media.php" method="post" class="card-body">
 						<div class="form-group">
                             Jugador 1 <input type="text" name="nombre1" placeholder="Nombre" class="form-control">
                         </div>
