subo mus para hacer cosas

--- a/MUs/media7.html
+++ b/MUs/media7.html
@@ -17,7 +17,7 @@
 		<div class="card border-success mb-3" style="max-width: 30rem;">
 		<div class="card-header">JUGADORES</div>
 		<div class="card-body">
-		<form id="product-form" name="media7" action="7media.php" method="post" class="card-body">
+		<form id="product-form" name="mus" action="mus.php" method="post" class="card-body">
 						<div class="form-group">
                             Jugador 1 <input type="text" name="nombre1" placeholder="Nombre" class="form-control">
                         </div>
@@ -29,9 +29,6 @@
                         </div>
 						<div class="form-group">
                             Jugador 4 <input type="text" name="nombre4" placeholder="Nombre" class="form-control">
-                        </div>
-						<div class="form-group">
-                            Cartas a repartir <input type="text" name="numcartas" placeholder="cartas" class="form-control">
                         </div>
 						<div class="form-group">
                             Cantidad Apostada <input type="text" name="apuesta" placeholder="apuesta €" class="form-control">
